<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_label">Gps Trax</string>
    <string name="accel_label">Accel</string>
    <string name="textGpsUpdatesStatusLabel">GPS update freq:</string>
    <string name="textGpsUpdatesStatus">-</string>
    <string name="editPlateNo">Plate No</string>
    <string name="editSpeedTh">Speeding Mph</string>
    <string name="editAccelTh">HB TH</string>
    <string name="editAccelTh2">HAC TH</string>
    <string name="editAboveThCntTh">HB Cnt TH</string>
    <string name="editAboveThCntTh2">HAC Cnt TH</string>
    <string name="buttonSavePlateNo">Save Setting</string>
    <string name="buttonSaveAccelTh">Save Setting</string>
    <string name="textLatLon">0.000000,-0.000000 alt: 0.00</string>
    <string name="textLastTime">-</string>
    <string name="button3">Save to DB</string>
    <string name="buttonRefreshCount">Refresh</string>
    <string name="buttonResetCount">Reset cnt</string>
    <string name="buttonDeleteAllAccels">Del Accels</string>
    <string name="buttonDeleteAllAlerts">Del Alerts</string>
    <string name="buttonSendLocations">Send Loc</string>
    <string name="buttonSaveAccelsToCsv">Save as CSV</string>
    <string name="buttonSendAlerts">Send Alerts</string>
    <string name="buttonListenGps5">5 sec</string>
    <string name="buttonListenGps180">180 sec</string>
    <string name="buttonStopGps">Stop GPS</string>
    <string name="buttonStartAccel">Start Accel</string>
    <string name="buttonStopAccel">Stop Accel</string>
    <string name="textGpsCnt">0</string>
    <string name="textSendCnt">0</string>
    <string name="textSaveAccelsCnt">0</string>
    <string name="textSaveAccelsCntLabel">Save Accels count:</string>
    <string name="textSendAlertCnt">0</string>
    <string name="textSendAlertCntLabel">Send Alert count:</string>
    <string name="textDbLocationCount">0</string>
    <string name="textDbAccelCountLabel">DB Accel count:</string>
    <string name="textDbAccelCount">0</string>
    <string name="textDbAlertCountLabel">DB Alert count:</string>
    <string name="textDbAlertCount">0</string>
    <string name="action_settings">Settings</string>
    <string name="buttonOpenAccel">Open Accel</string>

</resources>