<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonStartAccel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonStartAccelClick"
            android:text="@string/buttonStartAccel" />

        <Button
            android:id="@+id/buttonStopAccel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonStopAccelClick"
            android:text="@string/buttonStopAccel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonRefreshCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonRefreshCountClick"
            android:text="@string/buttonRefreshCount" />

        <Button
            android:id="@+id/buttonSendAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSendAlertsClick"
            android:text="@string/buttonSendAlerts" />

        <Button
            android:id="@+id/buttonSaveAccelsToCsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSaveAccelsToCsvClick"
            android:text="@string/buttonSaveAccelsToCsv" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/textDbAlertCountLabel" />

        <TextView
            android:id="@+id/textDbAlertCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/textDbAlertCount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/textDbAccelCountLabel" />

        <TextView
            android:id="@+id/textDbAccelCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/textDbAccelCount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/textSaveAccelsCntLabel" />

        <TextView
            android:id="@+id/textSaveAccelsCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/textSaveAccelsCnt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/textSendAlertCntLabel" />

        <TextView
            android:id="@+id/textSendAlertCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/textSendAlertCnt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonResetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonResetCountClick"
            android:text="@string/buttonResetCount" />

        <Button
            android:id="@+id/buttonDeleteAllAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonDeleteAllAlertsClick"
            android:text="@string/buttonDeleteAllAlerts" />

        <Button
            android:id="@+id/buttonDeleteAllAccels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonDeleteAllAccelsClick"
            android:text="@string/buttonDeleteAllAccels" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editAccelTh"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/editAccelTh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editAboveThCntTh"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/editAboveThCntTh" />

        <Button
            android:id="@+id/buttonSaveAccelTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSaveAccelThClick"
            android:text="@string/buttonSaveAccelTh" />
    </LinearLayout>

</LinearLayout>